--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
